@@ -362,6 +362,7 @@
 <!ENTITY calendarproperties.location.label "Ubicació:">
 <!ENTITY calendarproperties.name.label     "Nom:">
 <!ENTITY calendarproperties.readonly.label "Només de lectura">
+<!ENTITY calendarproperties.include-in-freebusy.label "Include in free-busy">
 <!ENTITY calendarproperties.firealarms.label "Mostra les alertes">
 <!ENTITY calendarproperties.cache.label    "Memòria cau (EXPERIMENTAL, cal tornar a engegar)">
 <!ENTITY calendarproperties.enabled.label  "Mostra aquest calendari">
