@@ -362,6 +362,7 @@
 <!ENTITY calendarproperties.location.label "Adresa:">
 <!ENTITY calendarproperties.name.label "Název:">
 <!ENTITY calendarproperties.readonly.label "Pouze ke čtení">
+<!ENTITY calendarproperties.include-in-freebusy.label "Include in free-busy">
 <!ENTITY calendarproperties.firealarms.label "Zobrazit upozornění">
 <!ENTITY calendarproperties.cache.label "Vyrovnávací paměť (EXPERIMENTÁLNÍ - vyžaduje restart)">
 <!ENTITY calendarproperties.enabled.label "Zapnout kalendář">
