@@ -362,6 +362,7 @@
 <!ENTITY calendarproperties.location.label "Dirección:">
 <!ENTITY calendarproperties.name.label     "Nombre:">
 <!ENTITY calendarproperties.readonly.label "Sólo lectura">
+<!ENTITY calendarproperties.include-in-freebusy.label "Include in free-busy">
 <!ENTITY calendarproperties.firealarms.label "Mostrar alarmas">
 <!ENTITY calendarproperties.cache.label    "Caché (EXPERIMENTAL, requiere reinicio)">
 <!ENTITY calendarproperties.enabled.label "Cambiar a este calendario">
