@@ -362,6 +362,7 @@
 <!ENTITY calendarproperties.location.label "Hely:">
 <!ENTITY calendarproperties.name.label     "Név:">
 <!ENTITY calendarproperties.readonly.label "Csak olvasható">
+<!ENTITY calendarproperties.include-in-freebusy.label "Include in free-busy">
 <!ENTITY calendarproperties.firealarms.label "Riasztások megjelenítése">
 <!ENTITY calendarproperties.cache.label    "Gyorsítótár (KÍSÉRLETI, újraindítás szükséges)">
 <!ENTITY calendarproperties.enabled.label "Naptár bekapcsolása">
