@@ -362,6 +362,7 @@
 <!ENTITY calendarproperties.location.label   "Położenie:">
 <!ENTITY calendarproperties.name.label       "Nazwa:">
 <!ENTITY calendarproperties.readonly.label   "Tylko do odczytu">
+<!ENTITY calendarproperties.include-in-freebusy.label "Include in free-busy">
 <!ENTITY calendarproperties.firealarms.label "Wyświetlaj powiadomienia">
 <!ENTITY calendarproperties.cache.label      "Pamięć podręczna (EKSPERYMENTALNE, wymaga ponownego uruchomienia)">
 <!ENTITY calendarproperties.enabled.label    "Włącz ten kalendarz">
