@@ -362,6 +362,7 @@
 <!ENTITY calendarproperties.location.label "Адрес:">
 <!ENTITY calendarproperties.name.label     "Название:">
 <!ENTITY calendarproperties.readonly.label "Только для чтения">
+<!ENTITY calendarproperties.include-in-freebusy.label "Include in free-busy">
 <!ENTITY calendarproperties.firealarms.label "Показывать оповещения">
 <!ENTITY calendarproperties.cache.label    "Кэшировать (ЭКСПЕРИМЕНТАЛЬНО, требуется перезапуск)">
 <!ENTITY calendarproperties.enabled.label "Переключить на этот календарь">
